// SPDX-License-Identifier: Apache-2.0

// Copyright 2021 PANTHEON.tech
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package vpp.abx;

option go_package = "go.pantheon.tech/stonework/proto/abx;vpp_abx";

// ACL based xconnect
message ABX {
    // ABX index (unique identifier)
    uint32 index = 1;

    // Name of the associated access list
    string acl_name = 2;

    // Name of outgoing interface
    string output_interface = 3;

    // Rewrite destination mac address
    string dst_mac = 4;

    // List of interfaces attached to the ABX
    message AttachedInterface {
        string input_interface = 1;
        uint32 priority = 2;
    }
    repeated AttachedInterface attached_interfaces = 5;
}
